# bgrep

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bgrep-rs/: Cargo.toml  PARITY_NOTES.md
bgrep-rs/src/: core.rs  history.rs  lib.rs  main.rs
lab/: HYPOTHESES.md  PREDICTIONS.md  README.md  analyze_v9.py  driver.py  history.py  lanes.py  lanes2.py  lanes3.py  swebench_driver2.py  swebench_driver3.py
lab/experiments/: control40_wd0.6.jsonl  fail52_wd1.0.jsonl
lab/results/: celery_task_dispatch.json  click_decorators.json  django_middleware.json  django_orm_queries.json  express_error_handling.json  express_middleware.json  fastapi_dependency_injection.json  fastapi_routing.json  flask_blueprints.json  gin_routing.json  go_gin_middleware.json  httpx_pooling.json  mini_redis_async.json  pydantic_validators.json  pytest_fixtures.json  react_hooks.json  requests_sessions.json  rust_tokio_runtime.json  sqlalchemy_sessions.json
lab/results_holdout/: loc_celery_task_retry.json  loc_click_param_process.json  loc_django_queryset_filter.json  loc_django_username_validator.json  loc_express_error_middleware.json  loc_fastapi_jsonable_encoder.json  loc_fastapi_solve_dependencies.json  loc_flask_blueprint_register.json  loc_flask_full_dispatch.json  loc_gin_context_next.json  loc_gin_tree_route.json  loc_httpx_pool_transport.json  (+9 more)
parity/: bundle_parity.py  harness.py  region_eval.py  region_eval2.py  region_eval_verified.py  rust_gate_300.json  shim_reference.py
roust-rs/: Cargo.toml
tests/: test_incremental.py  test_parity.py  test_smoke.py
(+148 files in other folders)
