[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "roust"
version = "0.2.0"
description = "Recall-first code retrieval for LLM coding agents — grep-level recall at ~1% of the tokens"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.maturin]
bindings = "bin"
manifest-path = "roust-rs/Cargo.toml"

[dependency-groups]
dev = [
    "pytest>=7.0",
]
